Got the Stage Manger working and now have two sample scene scrolling across the screen, one red and one blue.
Swapping these scenes out for actual textures and actual sprites should be easy enough now---the tricky bit will be placing all the hit boxes for whatever assets we add to the game world--tackle this when we get there, for now it looks like we have a good system to start, that should scale pretty dynamically as we add more stages.

Next to do is to handle the unloading and new loading of dead and new stages.

--- a/RGP204 Assignment One/RGP204 Assignment One.vcxproj
+++ b/RGP204 Assignment One/RGP204 Assignment One.vcxproj
@@ -148,11 +148,17 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\vampi\source\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="RedStage.cpp" />
+    <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="StageManager.cpp" />
+    <ClCompile Include="BlueStage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="GameTextures.hpp" />
     <ClInclude Include="Player.hpp" />
+    <ClInclude Include="Stage.hpp" />
+    <ClInclude Include="StageManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
