--- a/RGP204 Assignment One/RGP204 Assignment One.vcxproj
+++ b/RGP204 Assignment One/RGP204 Assignment One.vcxproj
@@ -147,12 +147,14 @@
     <ClCompile Include="BlueStage.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameTextures.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\Users\vampi\source\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">C:\Users\vampi\source\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\vampi\source\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\vampi\source\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+    <ClCompile Include="Orc.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="RedStage.cpp" />
     <ClCompile Include="Stage.cpp" />
@@ -162,6 +164,8 @@
     <ClInclude Include="Animation.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="GameTextures.hpp" />
+    <ClInclude Include="Item.hpp" />
+    <ClInclude Include="Orc.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Stage.hpp" />
     <ClInclude Include="StageManager.hpp" />
