--- a/RGP204 Assignment One/RGP204 Assignment One.vcxproj
+++ b/RGP204 Assignment One/RGP204 Assignment One.vcxproj
@@ -154,6 +154,7 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\vampi\source\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\vampi\source\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Orc.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="RedStage.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="GameTextures.hpp" />
     <ClInclude Include="Item.hpp" />
+    <ClInclude Include="Menu.hpp" />
     <ClInclude Include="Orc.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Stage.hpp" />
