Update, adding in ground classes from outside.

--- a/RGP204 Assignment One/RGP204 Assignment One.vcxproj
+++ b/RGP204 Assignment One/RGP204 Assignment One.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\Downloads\Ground.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="BlueStage.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -162,6 +163,7 @@
     <ClCompile Include="StageManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\Downloads\Ground.hpp" />
     <ClInclude Include="Animation.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="GameTextures.hpp" />
